# postoga

./: .gitignore  .gitmodules  Changelog.md  LICENSE  Makefile  README.md  configure.sh  constants.py  env.yml  logger.py  postoga.py  pyproject.toml  run.py  setup_postoga.sh  test.sh  version.py
.github/workflows/: ci.yml
modules/: assembly_stats.py  constants.py  convert_from_bed.py  filter_query_annotation.py  haplotype_branch.py  make_query_table.py  ortholog_lengths.py  plotter.py  requirements.py  rust-binaries.txt  utils.py  write_isoforms.py
rustools/: Cargo.toml  pyproject.toml
rustools/src/: bed.rs  lib.rs  lines.rs  utils.rs
supply/: Ancestral_placental_complete.txt  birds_genes_template.txt  mammal_genes_template.txt
supply/odbs/: eukaryota_odb10.txt  eutheria_odb10.txt  mammalia_odb10.txt  vertebrata_odb10.txt
supply/test/: orthology_scores.tsv  query_annotation.bed
supply/test/meta/: paralogous_projections.tsv
supply/test/meta/classification_results/: orthology_scores.tsv
supply/test/meta/orthology_resolution/: orthology_classification.tsv
supply/test/results/: codon_aln.fa  loss_summ_data.tsv  orthology_classification.tsv  projections.bed  protein_aln.fa
supply/test/temp/: isoforms.tsv  orthology_scores.tsv  paralogs.txt
