[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "postoga"
version = "0.10"
description = "The post-TOGA processing pipeline"
license = { text = "MIT" }
authors = [
    { name = "Alejandro Gonzales-Irribarren", email = "alejandrxgzi@gmail.com" },
]
keywords = [
    "genomics",
    "bioinformatics",
    "orthology",
    "TOGA",
    "annotation",
    "post-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
dependencies = [
    "numpy>=1.10, <2",
    "pandas>=1.3, <3",
    "maturin",
]

[project.urls]
homepage = "https://github.com/alejandrogzi/postoga"
repository = "https://github.com/alejandrogzi/postoga"

[tool.ruff]
target-version = "py37"
exclude = [".venv"]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "B", # bugbear
    # "D",  # pydocstyle
    "E",   # style errors
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff-specific rules
    "UP",  # pyupgrade
    "W",   # style  warnings
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "7"
log_cli_level = "info"
xfail_strict = true
addopts = ["-ra", "--showlocals", "--strict-config", "--strict-markers"]
filterwarnings = ["ignore::PendingDeprecationWarning"]
testpaths = ["TESTS"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.scripts]
postoga = "postoga.postoga:main"

[tool.hatch.envs.default]
path = ".env"

[tool.hatch.envs.default.scripts]
fix = "ruff check --fix ."
lint = "ruff check ."
format = "ruff format ."
configure = "./setup_postoga.sh"
test = "./postoga.py --help"

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]
