[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postoga"
version = "0.12"
description = "The post-TOGA processing pipeline"
authors = [
    { name = "Alejandro Gonzales-Irribarren", email = "alejandrxgzi@gmail.com" },
]
keywords = [
    "genomics",
    "bioinformatics",
    "orthology",
    "TOGA",
    "annotation",
    "post-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
dependencies = [
    "numpy==2.2.5",
    "pandas==2.2.3"
]

[project.scripts]
postoga = "postoga:main"

[tool.setuptools]
py-modules = ["postoga", "constants", "run"]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
namespaces = true

[project.urls]
homepage = "https://github.com/alejandrogzi/postoga"
repository = "https://github.com/alejandrogzi/postoga"

[tool.ruff]
target-version = "py37"
exclude = [".venv"]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "B", # bugbear
    # "D",  # pydocstyle
    "E",   # style errors
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff-specific rules
    "UP",  # pyupgrade
    "W",   # style  warnings
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "7"
log_cli_level = "info"
xfail_strict = true
addopts = ["-ra", "--showlocals", "--strict-config", "--strict-markers"]
filterwarnings = ["ignore::PendingDeprecationWarning"]
testpaths = ["TESTS"]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]
